--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,34 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Ionic Blank
+      Aula 99
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
+    <ion-list *ngFor="let usuario of usuarios">
+      <ion-item>
+        {{usuario.nome}} - {{usuario.idade}} 
+        <ion-button (click)="popularForm(usuario)">
+          Editar
+        </ion-button>
+        <ion-button color="danger" (click)="deletarUsuario(usuario.id)">
+          Excluir
+        </ion-button>
+      </ion-item>
+    </ion-list>
   </div>
+  <form (ngSubmit)="salvarUsuario()">
+    <ion-item>
+      <ion-label>Nome</ion-label>
+      <ion-input type="text" [(ngModel)]="usuarioCadastro.nome" name="nome"></ion-input>
+    </ion-item>
+    <ion-item>
+        <ion-label>Idade</ion-label>
+        <ion-input type="text" [(ngModel)]="usuarioCadastro.idade" name="idade"></ion-input>
+      </ion-item>
+      <ion-button type="submit" expand="full" color="primary">Salvar</ion-button>
+  </form>
 </ion-content>
